root = meson.project_source_root()
naevpedia_ships_sources = files(
   root / 'dat/ships/collective/drone.xml',
   root / 'dat/ships/collective/drone_carrier.xml',
   root / 'dat/ships/collective/drone_heavy.xml',
   root / 'dat/ships/collective/drone_hyena.xml',
   root / 'dat/ships/dvaered/dvaered_ancestor.xml',
   root / 'dat/ships/dvaered/dvaered_arsenal.xml',
   root / 'dat/ships/dvaered/dvaered_goddard.xml',
   root / 'dat/ships/dvaered/dvaered_phalanx.xml',
   root / 'dat/ships/dvaered/dvaered_retribution.xml',
   root / 'dat/ships/dvaered/dvaered_vendetta.xml',
   root / 'dat/ships/dvaered/dvaered_vigilance.xml',
   root / 'dat/ships/empire/empire_admonisher.xml',
   root / 'dat/ships/empire/empire_admonisher_longbow.xml',
   root / 'dat/ships/empire/empire_hawking.xml',
   root / 'dat/ships/empire/empire_lancelot.xml',
   root / 'dat/ships/empire/empire_lancelot_golden_efreeti.xml',
   root / 'dat/ships/empire/empire_pacifier.xml',
   root / 'dat/ships/empire/empire_pacifier_hoplite.xml',
   root / 'dat/ships/empire/empire_peacemaker.xml',
   root / 'dat/ships/empire/empire_rainmaker.xml',
   root / 'dat/ships/empire/empire_shark.xml',
   root / 'dat/ships/feral_bioship/kauweke.xml',
   root / 'dat/ships/feral_bioship/nohinohi.xml',
   root / 'dat/ships/feral_bioship/taitamariki.xml',
   root / 'dat/ships/misc/escape_pod.xml',
   root / 'dat/ships/misc/fort_raelid.xml',
   root / 'dat/ships/misc/fort_raglan.xml',
   root / 'dat/ships/misc/onewing_goddard.xml',
   root / 'dat/ships/misc/psychic_orb.xml',
   root / 'dat/ships/misc/sindbad.xml',
   root / 'dat/ships/neutral/admonisher.xml',
   root / 'dat/ships/neutral/admonisher_omegaiia.xml',
   root / 'dat/ships/neutral/ancestor.xml',
   root / 'dat/ships/neutral/ancestor_hg_eagleeye.xml',
   root / 'dat/ships/neutral/bedivere.xml',
   root / 'dat/ships/neutral/gawain.xml',
   root / 'dat/ships/neutral/gawain_xy37.xml',
   root / 'dat/ships/neutral/goddard.xml',
   root / 'dat/ships/neutral/goddard_merchant.xml',
   root / 'dat/ships/neutral/hawking.xml',
   root / 'dat/ships/neutral/hyena.xml',
   root / 'dat/ships/neutral/kestrel.xml',
   root / 'dat/ships/neutral/kestrel_sigma.xml',
   root / 'dat/ships/neutral/koala.xml',
   root / 'dat/ships/neutral/koala_armoured.xml',
   root / 'dat/ships/neutral/lancelot.xml',
   root / 'dat/ships/neutral/llama.xml',
   root / 'dat/ships/neutral/llama_voyager.xml',
   root / 'dat/ships/neutral/mule.xml',
   root / 'dat/ships/neutral/mule_hardhat.xml',
   root / 'dat/ships/neutral/pacifier.xml',
   root / 'dat/ships/neutral/phalanx.xml',
   root / 'dat/ships/neutral/plowshare.xml',
   root / 'dat/ships/neutral/quicksilver.xml',
   root / 'dat/ships/neutral/quicksilver_mercury.xml',
   root / 'dat/ships/neutral/rhino.xml',
   root / 'dat/ships/neutral/schroedinger.xml',
   root / 'dat/ships/neutral/shark.xml',
   root / 'dat/ships/neutral/shark_psiiiia.xml',
   root / 'dat/ships/neutral/starbridge.xml',
   root / 'dat/ships/neutral/starbridge_sigma.xml',
   root / 'dat/ships/neutral/tristan.xml',
   root / 'dat/ships/neutral/vendetta.xml',
   root / 'dat/ships/neutral/vendetta_whiplash.xml',
   root / 'dat/ships/neutral/vigilance.xml',
   root / 'dat/ships/neutral/zebra.xml',
   root / 'dat/ships/pirate/dealbreaker.xml',
   root / 'dat/ships/pirate/pirate_admonisher.xml',
   root / 'dat/ships/pirate/pirate_ancestor.xml',
   root / 'dat/ships/pirate/pirate_blue_shark.xml',
   root / 'dat/ships/pirate/pirate_hyena.xml',
   root / 'dat/ships/pirate/pirate_kestrel.xml',
   root / 'dat/ships/pirate/pirate_kestrel_yuris_kiss.xml',
   root / 'dat/ships/pirate/pirate_phalanx.xml',
   root / 'dat/ships/pirate/pirate_revenant.xml',
   root / 'dat/ships/pirate/pirate_rhino.xml',
   root / 'dat/ships/pirate/pirate_shark.xml',
   root / 'dat/ships/pirate/pirate_starbridge.xml',
   root / 'dat/ships/pirate/pirate_vendetta.xml',
   root / 'dat/ships/pirate/pirate_zebra.xml',
   root / 'dat/ships/proteron/proteron_archimedes.xml',
   root / 'dat/ships/proteron/proteron_dalton.xml',
   root / 'dat/ships/proteron/proteron_euler.xml',
   root / 'dat/ships/proteron/proteron_gauss.xml',
   root / 'dat/ships/proteron/proteron_hippocrates.xml',
   root / 'dat/ships/proteron/proteron_pythagoras.xml',
   root / 'dat/ships/proteron/proteron_watson.xml',
   root / 'dat/ships/sirius/astral_projection_greater.xml',
   root / 'dat/ships/sirius/astral_projection_lesser.xml',
   root / 'dat/ships/sirius/astral_projection_normal.xml',
   root / 'dat/ships/sirius/sirius_divinity.xml',
   root / 'dat/ships/sirius/sirius_dogma.xml',
   root / 'dat/ships/sirius/sirius_fidelity.xml',
   root / 'dat/ships/sirius/sirius_preacher.xml',
   root / 'dat/ships/sirius/sirius_providence.xml',
   root / 'dat/ships/sirius/sirius_shaman.xml',
   root / 'dat/ships/soromid/soromid_arx.xml',
   root / 'dat/ships/soromid/soromid_brigand.xml',
   root / 'dat/ships/soromid/soromid_copia.xml',
   root / 'dat/ships/soromid/soromid_ira.xml',
   root / 'dat/ships/soromid/soromid_marauder.xml',
   root / 'dat/ships/soromid/soromid_nyx.xml',
   root / 'dat/ships/soromid/soromid_odium.xml',
   root / 'dat/ships/soromid/soromid_reaver.xml',
   root / 'dat/ships/soromid/soromid_vox.xml',
   root / 'dat/ships/thurion/thurion_apprehension.xml',
   root / 'dat/ships/thurion/thurion_certitude.xml',
   root / 'dat/ships/thurion/thurion_ingenuity.xml',
   root / 'dat/ships/thurion/thurion_perspicacity.xml',
   root / 'dat/ships/thurion/thurion_perspicacity_beta.xml',
   root / 'dat/ships/thurion/thurion_scintillation.xml',
   root / 'dat/ships/thurion/thurion_taciturnity.xml',
   root / 'dat/ships/thurion/thurion_virtuosity.xml',
   root / 'dat/ships/zalek/zalek_demon.xml',
   root / 'dat/ships/zalek/zalek_demon_type_iv.xml',
   root / 'dat/ships/zalek/zalek_diablo.xml',
   root / 'dat/ships/zalek/zalek_drone_bomber.xml',
   root / 'dat/ships/zalek/zalek_drone_heavy.xml',
   root / 'dat/ships/zalek/zalek_drone_light.xml',
   root / 'dat/ships/zalek/zalek_drone_scout.xml',
   root / 'dat/ships/zalek/zalek_hephaestus.xml',
   root / 'dat/ships/zalek/zalek_mammon.xml',
   root / 'dat/ships/zalek/zalek_mephisto.xml',
   root / 'dat/ships/zalek/zalek_mephisto_type_v.xml',
   root / 'dat/ships/zalek/zalek_sting.xml',
   root / 'dat/ships/zalek/zalek_sting_typeii.xml',
   root / 'dat/ships/zalek/zalek_sting_typeiv.xml',
)

ships_gen = [find_program('ships.py'), '@INPUT@', '-o', '@OUTPUT@']
naevpedia_ships = []
foreach ns: naevpedia_ships_sources
  naevpedia_ships += custom_target( ns.full_path().replace('/','_'),
      command: ships_gen,
      input: ns,
      output: '@BASENAME@.md',
      install: true,
      install_dir: ndata_path / 'dat/naevpedia/ships',
    )
endforeach
