noinst_LIBRARIES = libwidget.a

AM_CFLAGS = $(NAEV_CFLAGS)

libwidget_a_SOURCES = \
	button.c \
	checkbox.c \
	cust.c \
	fader.c \
	image.c \
	imagearray.c \
	imagelayered.c \
	imagelayeredarray.c \
	input.c \
	list.c \
	rect.c \
	tabwin.c \
	text.c \
	button.h \
	checkbox.h \
	cust.h \
	fader.h \
	image.h \
	imagearray.h \
	imagelayered.h \
	imagelayeredarray.h \
	input.h \
	list.h \
	rect.h \
	tabwin.h \
	text.h
